syntax = "proto3";

package proto;

option go_package = "github.com/EmekaIwuagwu/volta_blockchain/proto/";

service VoltaBlockchain {
    rpc CreateAddress(CreateAddressRequest) returns (CreateAddressResponse);
    rpc SendTokens(SendTokensRequest) returns (SendTokensResponse);
    rpc CheckBalance(CheckBalanceRequest) returns (CheckBalanceResponse);
    rpc CheckTransactions(CheckTransactionsRequest) returns (CheckTransactionsResponse);
}

message CreateAddressRequest {}

message CreateAddressResponse {
    string message = 1;
    string address = 2;
    string balance = 3;
    string uuid = 4;
    string passkey = 5;
}

message SendTokensRequest {
    string addressFrom = 1;
    string addressTo = 2;
    string amount = 3;
    string passkey = 4;
}

message SendTokensResponse {
    string message = 1;
    string addressFrom = 2;
    string addressTo = 3;
    string amount = 4;
}

message CheckBalanceRequest {
    string address = 1;
}

message CheckBalanceResponse {
    string message = 1;
    string address = 2;
    string balance = 3;
}

message CheckTransactionsRequest {
    string address = 1;
}

message CheckTransactionsResponse {
    string message = 1;
    repeated Transaction transactions = 2;
}

message Transaction {
    string addressFrom = 1;
    string addressTo = 2;
    string amount = 3;
    string dateOfTransaction = 4;
    string createdAt = 5;
}
